# LibExecutive

./: CMakeLists.txt  README.md
include/: CLLogger.h  CLStatus.h
src/: CLLogger.cpp  CLStatus.cpp  testbuf.cpp
